# CopePilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  voicetest.py
assets/NickyGrist/: NickyGrist.txt  manifest.ini
assets/codriver_Janne Laahanen/: terminologies.json
assets/codriver_Janne Laahanen/corner_1_left/: subtitles.csv
assets/codriver_Janne Laahanen/corner_1_left_descriptive/: subtitles.csv
assets/codriver_Janne Laahanen/corner_1_left_reversed/: subtitles.csv
assets/codriver_Janne Laahanen/corner_1_right/: subtitles.csv
assets/codriver_Janne Laahanen/corner_1_right_reversed/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_left/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_left_descriptive/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_left_reversed/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_right/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_right_descriptive/: subtitles.csv
assets/codriver_Janne Laahanen/corner_2_right_reversed/: subtitles.csv
assets/codriver_Janne Laahanen/corner_3_left/: subtitles.csv
assets/codriver_Janne Laahanen/corner_3_left_descriptive/: subtitles.csv
assets/codriver_Janne Laahanen/corner_3_left_reversed/: subtitles.csv
assets/codriver_Janne Laahanen/corner_3_right/: subtitles.csv
assets/codriver_Janne Laahanen/corner_4_left/: subtitles.csv
src/copepilot/: __init__.py  audio.py  config.py  corners.py  geometry.py  main.py  map_loader.py  osm.py  pacenotes.py  path_projector.py  simulator.py  visualizer.py
tests/: test_corners.py  test_geometry.py
(+163 files in other folders)
